--- a/Ecommerce.Ioc/Ecommerce.Ioc.csproj
+++ b/Ecommerce.Ioc/Ecommerce.Ioc.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Ecommerce.Interface\Ecommerce.Interface.csproj" />
+    <ProjectReference Include="..\Ecommerce.Service\Ecommerce.Service.csproj" />
     <ProjectReference Include="..\Ecommerce.UnitOfWork\Ecommerce.UnitOfWork.csproj" />
   </ItemGroup>
 
